--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/diorgeneseugenio/cripto-monitor#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.1.0"
+    "@types/node": "^14.14.37",
+    "git-commit-msg-linter": "^3.1.0",
+    "typescript": "^4.2.4"
   }
 }
