--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
   "homepage": "https://github.com/diorgeneseugenio/cripto-monitor#readme",
   "devDependencies": {
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.1.0",
     "typescript": "^4.2.4"
   }
