--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.1.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.2",
     "typescript": "^4.2.4"
   }
 }
