--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
